# llss

./: .ccls  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.autodeps  README.md  TODO  TODO.md  app.sln  artifact.ps1  artifact.sh  artifacts.ps1  artifacts.sh  build-dep.ps1  build-deps-systemwide.sh  build-deps-userwide.sh  build.ps1  cflags  configure  get  imgui.ini  ldflags  llss-mod-template.sln  llss.sln  make-release.cmd  make.cmd  make.ps1  mod-template.sln  pkgc  snip.c
.cargo/: config.toml
.github/workflows/: linux-build-debug.yml  linux-build-release.yml  linux-build.yml  linux-sources-release.yml  linux-sources.yml  msbuild-debug.yml  msbuild-release.yml
dev/: pretty-log.pl  renderdoc.sh  watch-make-run-app-trace
doc/: BUILDING-Linux.md  BUILDING-MacOS.md  BUILDING-MacOSX.md  BUILDING-Windows.md  CONTRIBUTING.md  DEBUGGING-Linux.md  PERFORMANCE.md  TODO.md
doc/dev/early/: GOALS-scratchpad.md  build-trace-linux.txt  build-trace-msbuild.txt  git-initial-setup.sh
examples/: bevy_egui_dock.rs
include/: app-components-composition.h  app-components-core.h  app-components-mods.h  app-systems-core.h  app-systems-mods.h  app-version.h  app.h  build-dep-version.h  imgui_config.h  metadata.h  mod-host.h  mods-api.h  mods-components-core-lifecycle.h  mods-systems-core-lifecycle.h  utils.h  version-app.h  version-build-dep.h
internal/: alloc.h  plugin-host.h  ui.h
lib/: Makefile
lib/ecs/: Makefile  cflags  flecs.vcxproj  get
lib/ecs/flecs/: flecs.h
lib/platform/: Makefile
lib/ui/: ImGuiLib.vcxproj  Makefile  cflags  get  ldflags
llss.xcodeproj/: project.pbxproj
llss.xcodeproj/project.xcworkspace/xcuserdata/ludo.xcuserdatad/: UserInterfaceState.xcuserstate
llss.xcodeproj/xcuserdata/ludo.xcuserdatad/xcschemes/: xcschememanagement.plist
mods/: Makefile
mods/llss-mod-template/src/: .plugin.c.swp  Makefile  cflags  dllmain.c  hello.c  hello.h  ldflags  ldlibs  llss-mod-template.vcxproj  mod.c  mod.h  pkgc  plugin.c  plugin.h  soname  ui-theming.c  ui-theming.h
mods/llss-theme-rlyeh3/src/: Makefile  cflags  ldflags  llss-theme-rlyeh3.vcxproj  mod.c  ui-theming.c
mods/mod-scratchpad/program/: compositing.c  compositing.h  mod-scratchpad.c  mod-scratchpad.vcxproj  mod.c
mods/mod-template/program/: Makefile  get  hello.c  hello.h  mod-template.c  mod-template.vcxproj  mod-template.vcxproj.filters  mod.c  reload-loop.sh
mods/mod-template/src/: Makefile  cflags  get  hello.c  hello.h  ldflags  mod-template.vcxproj  mod.c
mods/mod-theme-rlyeh3/program/: Makefile  get  mod-theme-rlyeh3.vcxproj  mod-theme-rlyeh3.vcxproj.filters  mod.c  ui-theming.c  ui-theming.h
mods/mod-theme-rlyeh3/program/platform-specific/: dllmain.c
mods/mod-theme-rlyeh3/src/: Makefile  cflags  ldflags  mod-theme-rlyeh3.vcxproj  mod.c  soname  ui-theming.c
mods/mod-ui-main/program/: get  mod-ui-main.c  mod-ui-main.vcxproj  mod-ui-main.vcxproj.filters  mod.c  ui-main.c  ui-main.h
mods/mod-uitheme-rlyeh3/program/: get  mod-uitheme-rlyeh3.vcxproj  mod-uitheme-rlyeh3.vcxproj.filters  mod.c  ui-theming.c
program/: Makefile  alloc.c  alloc.h  app-components-composition.c  app-components-core.c  app-components-mods.c  app-event.c  app-init.c  app-internal.h  app-iterate.c  app-systems-core.c  app-systems-mods.c  app.rc  app.vcxproj  app.vcxproj.filters  ecs-app-core.c  ecs-mods-lifecycle.c  ecs-mods-state.c  ecs-module1.c  get  main.c  mod-host.c  mod-host.h  mods-components-core-lifecycle.c  mods-systems-core-lifecycle.c  resource.h  sdl-app-event.c  sdl-app-init.c  sdl-app-iterate.c  thread-inotify.c  ui-main.c  ui-main.h  ui.h  utils.c
program/platform-specific/rc/: resource.h
scratchpad/: Makefile  alloc.c  alloc.h  get  main.c  scratch.c  scratch.h  sdl-app-init-mini.c  sdl-app-init-mini.h  utils.c
src/: AppDelegate.h  AppDelegate.m  Makefile  alloc.c  alloc.h  app-event.c  app-init.c  app-internal.h  app-iterate.c  app.rc  app.vcxproj  app.vcxproj.filters  cflags  core_components.rs  demo_scene.rs  exename  get  ldflags  ldlibs  llss.c  llss.vcxproj  llss.vcxproj.filters  main.c  main.rs  mod-host.c  mod-host.h  pkgc  plugin-host.c  src.vcxproj  src.vcxproj.filters  ui-main.c  ui_main.rs
src/Base.lproj/: MainMenu.xib
src/fr.lproj/: MainMenu.strings
src/platform-specific/rc/: resource.h
