[package]
name = "llss"
version = "0.1.0"
edition = "2024"

# from: https://doc.rust-lang.org/cargo/reference/features.html
# and: https://docs.rs/bevy/latest/bevy/index.html#cargo-features
[dependencies]
anyhow = "*"
bevy = { version = "0.16.1", features = ["jpeg", "symphonia-all", "sysinfo_plugin", "webp"] }
bevy_enhanced_input = "0.14.1"
bevy_framepace = "0.19.1"
bevy_mod_debugdump = { version = "0.13.0", optional = true }
crossbeam-channel = "*"
ctrlc = "*"
derive_more = { version = "*", features = ["display", "error"] }
xdg = "*"

# from: https://bevyengine.org/learn/quick-start/getting-started/setup/#dynamic-linking
# then: https://docs.rs/bevy/latest/bevy/dev_tools/struct.DevToolsPlugin.html
[features]
default = ["dev_mode", "wayland"] # not a good practice if we were a reusable crate, seems okay for a program
dev_mode = ["dep:bevy_mod_debugdump", "bevy/dynamic_linking", "bevy/bevy_dev_tools", "bevy/file_watcher"]
# , "bevy/bevy_debug_stepping", "bevy/detailed_trace", "bevy/trace_tracy", "bevy/trace_tracy_memory"]
wayland = ["bevy/wayland"]

# from https://stackoverflow.com/questions/38803760/how-to-get-a-release-build-with-debugging-information-when-using-cargo
[profile.release-with-debug]
inherits = "release"
debug = true

# from: https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
